--- a/includes/style.css
+++ b/includes/style.css
@@ -1,3 +1,199 @@
+@import url('https://fonts.googleapis.com/css2family=Poppins&display=swap');
+
+*,
+::after,
+::before {
+    box-sizing: border-box;
+}
+
+body {
+    font-family: 'Poppins', sans-serif;
+    font-size: 0.875rem;
+    opacity: 1;
+    overflow-y: scroll;
+    margin: 0;
+}
+
+a {
+    cursor: pointer;
+    text-decoration: none;
+    font-family: 'Poppins', sans-serif;
+}
+
+li {
+    list-style: none;
+}
+
+h4 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 1.275rem;
+    color: var(--bs-emphasis-color);
+}
+
+/* for admin daskboar skeleton */
+.wrapper {
+    align-items: stretch;
+    display: flex;
+    width: 100%;
+}
+#sidebar {
+    max-width: 264px;
+    min-width: 264px;
+    background: var(--bs-dark);
+    transition: all 0.35s ease-in-out;
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    min-width: 0;
+    overflow: hidden;
+    transition: all 0.35s ease-in-out;
+    width: 100%;
+    background: var(--bs-dark-bg-subtle);
+}
+
+/* Navbar Elements*/
+
+.sidebar-logo {
+    padding: 1.15rem;
+}
+
+.sidebar-logo a {
+    color: #e9ecef;
+    font-size: 1.15rem;
+    font-weight: 600;
+}
+
+.sidebar-nav {
+    flex-grow: 1;
+    list-style: none;
+    margin-bottom: 0;
+    padding-left: 0;
+    margin-left: 0;
+}
+
+.sidebar-header {
+    color: #e9ecef;
+    font-size: .75rem;
+    padding: 1.5rem 1.5rem .375rem;
+}
+
+a.sidebar-link {
+    padding: .625rem 1.625rem;
+    color: #e9ecef;
+    position: relative;
+    display: block;
+    font-size: 0.875em;
+}
+
+.sidebar-link[data-bs-toggle="collapse"]::after {
+    content: "";
+    display: inline-block;
+    margin-left: .255em; /* added margin for alignment */
+    vertical-align: middle; /* align arrow correctly with text */
+    border-top: .3em solid transparent; /* top border */
+    border-bottom: .3em solid transparent; /* bottom border */
+    border-left: .3em solid; /* left border for right arrow */
+    /* the arrow is pointing to the right by default */
+    transition: transform .2s ease-out;
+    transform: rotate(0deg);
+    /* position the pseudo-element properly */
+    position: absolute;
+    top: 50%;
+    right: 1.5rem;
+    /* Adjust to center the arrow */
+    transform: translateY(-50%) rotate(0deg);
+}
+
+.sidebar-link[data-bs-toggle="collapse"].collapsed::after {
+    transform: translateY(-50%) rotate(-90deg);
+    transition: transform .2s ease-out;
+}
+
+.avatar {
+    height: 40px;
+    width: 40px;
+}
+
+.navbar-expand .navbar-nav {
+    margin-left: auto;
+}
+
+.content {
+    flex: 1;
+    max-width: 100vw;
+    width: 100vw;
+}
+
+@media (min-width:768px) {
+    .content {
+        max-width: auto;
+        width: auto;
+    }
+}
+
+.card {
+    box-shadow: 0 0 .875rem 0 rgba(34, 46, 60, .05);
+    margin-bottom: 24px;
+}
+
+.illustration {
+    background-color: var(--bs-primary-bg-subtle);
+    color: var(--bs-emphasis-color);
+}
+
+.illustration-img {
+    max-width: 150px;
+    width: 100%;
+}
+
+#sidebar.collapsed {
+    margin-left: -264px;
+}
+
+/* footer and navbar */
+
+@media (max-width:767.98px) {
+    .navbar,
+    footer {
+        width: 100vw;
+    }
+}
+
+/* Theme toggler */
+
+.theme-toggler {
+    position: fixed;
+    top: 50%;
+    transform: translate(-65%);
+    text-align: center;
+    z-index: 10;
+    right: 0;
+    left: auto;
+    border: none;
+    background-color: var(--bs-body-color);
+}
+
+html[data-bs-theme="dark"] .theme-toggler .fa-sun,
+html[data-bs-theme="light"] .theme-toggler .fa-moon {
+    cursor: pointer;
+    padding: 10px;
+    display: block;
+    font-size: 1.25rem;
+    color: #fff;
+}
+
+html[data-bs-theme="dark"] .theme-toggler .fa-moon,
+html[data-bs-theme="light"] .theme-toggler .fa-sun {
+    display: none;
+}
+
+
+
+/*Front page buttons*/
+
 #background-image {
     background-image: url('../images/newbkg.jpg'); /* Adjust the path as necessary */
     background-size: cover;
