back to main station

--- a/includes/style.css
+++ b/includes/style.css
@@ -221,8 +221,8 @@ a.sidebar-link {
 .card-body {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* Align items to the start of the flex container */
-    padding: 0;
+    
+    padding: 20px;
 }
 
 .illustration {
