--- a/includes/style.css
+++ b/includes/style.css
@@ -44,7 +44,7 @@ tr th, tr td {
 #sidebar {
     max-width: 264px;
     min-width: 264px;
-    background: var(--bs-dark);
+    background: rgb(10, 0, 100);
     position: fixed;
     top: 0;
     bottom: 0;
@@ -216,12 +216,14 @@ a.sidebar-link {
 .card {
     box-shadow: 0 0 .875rem 0 rgba(34, 46, 60, .06);
     margin-bottom: 24px;
+    opacity: 0.7;
 }
 
 .card-body {
     display: flex;
     flex-direction: column;
     padding: 20px;
+    
 }
 
 .illustration {
@@ -318,7 +320,7 @@ html[data-bs-theme="light"] .theme-toggler .fa-sun {
 /*Front page buttons*/
 
 #background-image {
-    background-image: url('../images/newbkg.jpg'); /* Adjust the path as necessary */
+    
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -355,4 +357,33 @@ html[data-bs-theme="light"] .theme-toggler .fa-sun {
 
 .no-underline:hover {
     text-decoration: underline; /* Adds underline on hover */
+}
+
+.nav-link {
+    color: rgb(10, 0, 100) !important; /* Default color */
+    transition: color 0.3s ease, transform 0.3s ease; /* Smooth transition for color and transform */
+}
+
+.nav-link:hover,
+.nav-link:focus { /* Apply styles on hover and focus (for accessibility) */
+    color: rgb(4, 0, 44) !important; /* Change color to white on hover */
+    transform: scale(1.1); /* Scale up the text by 10% */
+}
+
+.nav-link:active { /* Apply styles when link is active (clicked) */
+    color: rgb(4, 0, 44) !important; /* Change color to white when active */
+    transform: scale(1.1); /* Scale up the text by 10% */
+}
+
+.nav-item.active > .nav-link {
+    color: red; /* Change color to indicate active state */
+    font-weight: bold; /* Optionally, add other styles */
+}
+
+.navbar-brand {
+    color: rgb(0, 0, 0);
+}
+
+.navbar-brand:hover {
+    color: rgb(70, 70, 70);
 }
