--- a/users/style.css
+++ b/users/style.css
@@ -15,6 +15,12 @@ li {
     list-style: none;
 }
 
+textarea {
+    resize: none;
+    overflow: hidden;
+    min-height: 50px; /* Adjust based on your needs */
+}
+
 .line {
     width: 100%;
     height: 1px;
@@ -306,10 +312,6 @@ tr.highlight th {
     right: 10px; /* Adjust right margin */
 }
 
-.upload-btn {
-    border-radius: 3px; /* Adjust border radius for rounded corners */
-}
-
 .profile-image {
     position: relative;
     display: inline-block;
@@ -383,7 +385,17 @@ tr.highlight th {
     text-align: left;
 }
 
+.card-height {
+    height: 100%; /* Ensure cards take up full height of their parent */
+}
 
+.center-all {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    height: 100%; /* Ensure content is centered vertically */
+}
 
 .profile-boxes1,
 .profile-boxes2 {
@@ -397,6 +409,9 @@ tr.highlight th {
     overflow: auto;
 }
 
+.uniform-btn {
+    width: 50px; /* Set the desired width */
+}
 
 @media (min-width: 768px) {
     .d-grid button {
