--- a/users/style.css
+++ b/users/style.css
@@ -21,11 +21,23 @@ textarea {
     min-height: 50px; /* Adjust based on your needs */
 }
 
+#map {
+    height: 400px;  /* The height is 400 pixels */
+    width: 100%;    /* The width is the width of the web page */
+}
+
 .line {
     width: 100%;
     height: 1px;
     background-color: #ccc; /* or any other color you prefer */
     margin: 20px 0; /* adjust margin as needed */
+}
+
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
 }
 
 body {
